syntax = "proto3";

// must have package name

package proto;
option go_package = "./proto";

// build two method
// Add block to blockchain
// Get block from blockchain

service Blockchain {
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
    rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse) {}
}

// data struct of request and response

message AddBlockRequest {
    string data = 1;
}

message AddBlockResponse {
    string hash = 1;
}


message GetBlocksRequest {
   
}

// becasue GetBlockResponse has to response the data of block
// need define block's data struct
message Block {
    string prevBlockHash = 1;
    string data = 2;
    string hash = 3;
}

message GetBlocksResponse {
   // return a slice of block
   repeated Block blocks = 1;
}
